1.10.2.1 Released ?? March 2010
	- Add multiline (i.e. separated by \n) text printing.
	- Bug with MGL options including bug with 'legend' option for automatic colors.
	- Bug with 'A' option of text style.

1.10.2 Released 22 March 2010
	- Add MGL command 'loadfont' for in-script font changing.
	- Add labelw_ext() and rename Label() to Labelw() for wchar_t argument.
	- Python interface now can use 3D NumPy arrays as initialization of mglData() constructor.
	- Add C/Fortran/SWIG interface for a number of mglData functions: Find(), Last(), FindAny(), Maximal(), Minimal(), Momentum().
	- Add extra argument for Face() which define variable color for the face (C++ only).
	- Bug with font path reconstraction in win32.
	- Bug with options parsing for MGL command.
	- Bug in mglData::Sum(), Max(), Min() for operation along several direction.

1.10.1 Released 5 March 2010
	- Add "in-place" commands for arguments in a MGL script (like, "plot {sum dat 'x'}").
	- Add StickPlot() for putting plot in to a cell of sticks
	- Add parsing of MGL option arguments.
	- Allow marks drawing in Tens() plot.
	- If text style contain 'a'/'A' then text in absolute subplot/picture coordinates is drawn.
	- Add functions mglGraph::Hist() for converting value from points to grids.
	- Add extra argument for 'box' command.
	- Add ticks (lines) for Colorbar.
	- Add GridPnts for changing number of points in grid lines (for curved coordinates)
	- Colorbar factor now placed at top of a plot.
	- Dots() now don't change transparence for self.
	- Bug with missing ticks tunning in Colorbar is corrected.
	- Bug of double glyph drawing in mglGraphPS is corrected.

1.10 Released 25 December 2009
	- Change license from GPL to LGPL for MathGL core. SWIG-based interfaces still have GPL.
	- Add new plot BoxPlot() for plotting data statistic (max, min, median, quartiles).
	- Add formula for coloring like formulas for curvilinear coordinates.